github page action

--- a/demos/index.html
+++ b/demos/index.html
@@ -111,5 +111,28 @@
   <div class="grid">
 
     <!-- ⭐ 每新增一个 demo，只需要复制一张 card -->
+mo
+    <a class="card" href="./taptap-10y/">
+      <div class="tag">H5 Activity</div>
+      <div class="title">TapTap 10th Anniversary</div>
+      <div class="desc">
+        十周年线上活动 Demo
+      </div>
+    </a>
 
-    <a class="card" hr
+    <!-- 示例：以后新增项目这样写 -->
+    <!--
+    <a class="card" href="./pet-sim/">
+      <div class="tag">Game</div>
+      <div class="title">PetSim</div>
+      <div class="desc">桌面宠物挂机互动原型</div>
+    </a>
+    -->
+
+  </div>
+
+  <footer>
+    © 2026 Yongjie · Built with GitHub Pages
+  </footer>
+</body>
+</html>
