--- a/demos/index.html
+++ b/demos/index.html
@@ -111,8 +111,8 @@
   <div class="grid">
 
     <!-- ⭐ 每新增一个 demo，只需要复制一张 card -->
-mo
-    <a class="card" href="./taptap-10y/">
+
+    <a class="card" href="./TapTap-10y/taptap-10y-h5-demo/">
       <div class="tag">H5 Activity</div>
       <div class="title">TapTap 10th Anniversary</div>
       <div class="desc">
