--- a/demos/TapTap-10y/taptap-10y-h5-demo/index.html
+++ b/demos/TapTap-10y/taptap-10y-h5-demo/index.html
@@ -40,6 +40,8 @@
         </div>
       </header>
 
+      <div class="sticky-stats hidden" id="stickyStats" aria-label="积分与点券"></div>
+
       <main class="main" id="main"></main>
     </div>
 
