--- a/demos/TapTap-10y/taptap-10y-h5-demo/index.html
+++ b/demos/TapTap-10y/taptap-10y-h5-demo/index.html
@@ -21,6 +21,7 @@
 
         <div class="opening__hint" id="openingHint">开启动画ing…</div>
         <button class="btn btn--brand opening__btn hidden" id="btnEnterRecap" type="button">开启我的TapTap十年回顾</button>
+        <button class="btn btn--ghost btn--sm opening__debug hidden" id="btnOpeningDebug" type="button" aria-label="打开测试设置（开场页）">测试设置</button>
       </div>
     </div>
 
@@ -57,7 +58,7 @@
 
     <div class="toast hidden" id="toast" role="status" aria-live="polite"></div>
 
-    <script src="./app.js"></script>
+    <script src="./app.js?v=20260206"></script>
   </body>
 </html>
 
