添加授权协议

--- a/demos/TapTap-10y/taptap-10y-h5-demo/index.html
+++ b/demos/TapTap-10y/taptap-10y-h5-demo/index.html
@@ -20,6 +20,10 @@
         </div>
 
         <div class="opening__hint" id="openingHint">开启动画ing…</div>
+        <label class="opening__agree hidden" id="openingAgree">
+          <input type="checkbox" id="chkAgree" checked />
+          <span>我已阅读并同意<a href="javascript:void(0)" id="lnkAgreement">TapTap 十周年活动协议</a></span>
+        </label>
         <button class="btn btn--brand opening__btn hidden" id="btnEnterRecap" type="button">开启我的TapTap十年回顾</button>
         <button class="btn btn--ghost btn--sm opening__debug hidden" id="btnOpeningDebug" type="button" aria-label="打开测试设置（开场页）">测试设置</button>
       </div>
